[project]
name = "netkick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inquirer>=3.4.1",
    "inquirerpy>=0.3.4",
    "ipaddress>=1.0.23",
    "mac-vendor-lookup>=0.1.15",
    "netifaces>=0.11.0",
    "psutil>=7.2.2",
    "scapy>=2.7.0",
]
